Fri Apr 25 16:59:31 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Various changes to reflect new configure (versions defined in
	  configure.in, changed HAVE_LIBFACTORY into HAVE_FACTORY, data
	  dir is pasted from configure into mod2.h and used from there in
	  feFopen. 

	* Added configure facility, repalced mod2.h by mod2.h.in Makefile
	  by Makefile.in 

Fri Apr 18 09:47:22 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (DumpAsciiIdhdl): LIB string is dumped without type
	  declaration 

	* mpsr_Get.cc (InitIdentifierLeftv): used mpsr_SetCurrRing(r,
	  TRUE) so that pOne works if no ring did previously exist.

	* iparith.cc: Added jjPROC3.

Tue Apr 15 12:07:17 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (slStandardInit): changed Ascii type specifyer from
	  "ascii" to "Ascii" for consistency

	* iparith.cc : added #else branch to #ifdef HAVE_FGLM in proc table

	*  (extra.cc): system("sh",command) returns exit status of command

Thu Apr 10 11:59:41 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* remote quit is now arranged using MP_CopMpQuit

	* Updated mpsr_* files for new naming convention of MP v:1.1.2 

Tue Apr  8 10:43:48 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Reimplemented link structures. Cleaned it up. Introduced assignment
link = link. Fixed some bugs in asciidump. Made proc's work for MP links.

Sat Mar 29 16:01:39 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (DumpQring): Takes care of dumping a Qring
	(slInit): enable ascii link specification of the form "filename
	mode:w"

Fri Mar 28 14:12:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Added routines dump(link) and getdump(link) for ascii and MP
	  links 
