@@ -1,7 +1,7 @@
 /*****************************************
 *  Computer Algebra System SINGULAR      *
 *****************************************/
-/* $Id: extra.cc,v 1.8 1997-04-25 15:03:55 obachman Exp $ */
+/* $Id: extra.cc,v 1.9 1997-04-25 18:35:09 obachman Exp $ */
 /*
 * ABSTRACT: general interface to internals of Singular ("system" command)
 */
@@ -10,23 +10,28 @@
 #include <stdio.h>
 #include <string.h>
 #include <ctype.h>
+#include "mod2.h"
 
 #ifndef macintosh
-#if TIME_WITH_SYS_TIME
+#ifdef TIME_WITH_SYS_TIME
 # include <time.h>
-# include <sys/times.h>
+# ifdef HAVE_SYS_TIME_H
+#   include <sys/time.h>
+# endif
 #else
-# if HAVE_SYS_TIME_H
-#   include <sys/times.h>
+# ifdef HAVE_SYS_TIME_H
+#   include <sys/time.h>
 # else
 #   include <time.h>
 # endif
+#endif
+#ifdef HAVE_SYS_TIMES_H
+#include <sys/times.h>
 #endif
 
 #include <unistd.h>
 #endif
 
-#include "mod2.h"
 #include "tok.h"
 #include "ipid.h"
 #include "kutil.h"
